--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+
+hr{ 
+  
+    border:         none;
+    border-left:    1px solid hsla(200, 10%, 50%,100);
+    height:         100vh;
+    width:          1px;       
+}
+
+.filters {
+  width: 30%;
+  /* margin-bottom: 15px; */
+  margin-left: 0;
+}
+
+.staticGraphs {
+  width: 35%;
+  margin-top: auto;
+  margin-left: 50%;
+}
