--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,59 +1,24 @@
-.App {
-  text-align: center;
+#root {
+  width: 100vw;
+  height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
 hr{ 
   
     border:         none;
     border-left:    1px solid hsla(200, 10%, 50%,100);
-    height:         100vh;
+    height:         100%;
     width:          1px;       
 }
 
-.filters {
-  width: 30%;
-  /* margin-bottom: 15px; */
-  margin-left: 0;
+.background {
+  background-color: aliceblue;
 }
-
-.staticGraphs {
-  width: 35%;
-  margin-top: auto;
-  margin-left: 50%;
+.buttonDS {
+  margin-top: 40px;
+  margin-right: 6px;
+}
+.filtersSelect {
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 15px; 
 }
