--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,7 +1,21 @@
-#root {
-  width: 100vw;
-  height: 100vh;
+.mainWrapper{
+    width: 100%;
+    height: 100%;
+    /* margin-left: 15px; */
 }
+
+h1, h3 {
+  text-align: center;
+}
+
+.selectStyle {
+  width: 85%;
+}
+
+.staticGraph {
+  margin-top: 2px;
+}
+
 hr{ 
   
     border:         none;
@@ -10,15 +24,5 @@ hr{
     width:          1px;       
 }
 
-.background {
-  background-color: aliceblue;
-}
-.buttonDS {
-  margin-top: 40px;
-  margin-right: 6px;
-}
-.filtersSelect {
-  width: 100%;
-  margin-top: 15px;
-  margin-bottom: 15px; 
-}
+
+
